[gd_scene load_steps=7 format=2]

[ext_resource path="res://Graphics/Halo.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Halo.gd" type="Script" id=2]
[ext_resource path="res://Graphics/JitterFreePixelArt.tres" type="Material" id=3]
[ext_resource path="res://Audio/animal melee sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Hit_02.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[node name="Halo" type="Area2D"]
collision_layer = 16
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
rotation = 1.5708
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="Halo" type="Sprite" parent="."]
material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="ChangeDir" type="Timer" parent="."]
wait_time = 0.75

[node name="HaloSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="EnemyDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -25.0
[connection signal="body_entered" from="." to="." method="_on_Halo_body_entered"]
[connection signal="timeout" from="ChangeDir" to="." method="_on_ChangeDir_timeout"]
